This is second commit

--- a/CSS/Style/Header/_header.scss
+++ b/CSS/Style/Header/_header.scss
@@ -26,7 +26,7 @@
     color: $white;
     font-family: $oxanium;
     text-transform: capitalize;
-    font-size: 3rem;
+    font-size: 30px;
     font-weight: 800;
 }
 .header__btns{
